# rag-vs-cag

./: .env.example  .gitignore  AGENTS.md  README.md  hardware-used.txt  main.py  pyproject.toml  rag_vs_cag_experiment.ipynb  temp.ps1
result/: cag_large_result.json  cag_large_summary.json  cag_medium_result.json  cag_medium_summary.json  cag_small_result.json  cag_small_summary.json  rag_cag_exp_overview.json  rag_large_k10_result.json  rag_large_k10_summary.json  rag_large_k2_result.json  rag_large_k2_summary.json  rag_large_k4_result.json  rag_large_k4_summary.json  rag_large_k6_result.json  rag_large_k6_summary.json  rag_medium_k10_result.json  rag_medium_k10_summary.json  rag_medium_k2_result.json  rag_medium_k2_summary.json  rag_medium_k4_result.json  rag_medium_k4_summary.json  rag_medium_k6_result.json  rag_medium_k6_summary.json  rag_small_k10_result.json  rag_small_k10_summary.json  rag_small_k2_result.json  rag_small_k2_summary.json  rag_small_k4_result.json  rag_small_k4_summary.json  rag_small_k6_result.json  rag_small_k6_summary.json
src/: cag.py  rag.py  utils.py
